<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 The National Disaster Logging System (NDLS) Project

         This project is a property of Michael Oberkoh and Ruth Yankson
         Unless giving explicit permission in writing, this project shouldn't be used whole or in part by a third person.

    -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ReportDisasterActivity">


    <!-- Nature of disaster category -->
    <LinearLayout
        android:id="@+id/container_nature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_nature_of_disaster"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Nature of disaster drop-down spinner -->
            <!-- For now use the values for gender as placeholder -->
            <Spinner
                android:id="@+id/spinner_nature_of_disaster"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- location category -->
    <LinearLayout
        android:id="@+id/container_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_location"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Location field -->
            <EditText
                android:id="@+id/edit_location"
                android:hint="@string/hint_location"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Location picker (For now use a dummy play image) -->
            <ImageView
                android:id="@+id/label_location_picker"
                style="@style/EditorUnitsStyle"
                android:src="@drawable/ic_play_arrow"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Additional Information category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_additional_information"
            style="@style/CategoryStyle" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_additional_information"
                android:hint="@string/hint_additional_information"
                android:inputType="textMultiLine"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/EditorFieldStyle" />

    </LinearLayout>

</LinearLayout>
